# kick.com-SDK

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/kick_sdk/: example.py  kick_sdk.py  simple_moderation_bot.py
src/kick_sdk/data/: authenticated_user.py  message_entry.py
src/kick_sdk/util/: logger.py
